cabal-version:       2.4
name:                holz
version:             0
synopsis:            OpenGL & GLFW wrapper
-- description:
homepage:            https://github.com/fumieval/holz
license:             BSD-3-Clause
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           Copyright (c) 2015 Fumiaki Kinoshita
category:            Graphics
build-type:          Simple
-- extra-source-files:

library
  exposed-modules:
    Graphics.Holz.Shader.Simple
    , Graphics.Holz.Shader
    , Graphics.Holz.System
    , Graphics.Holz.Typeset
    , Graphics.Holz.Input
    , Graphics.Holz.Font
    , Graphics.Holz
  other-extensions:    DeriveDataTypeable, DeriveFunctor, DeriveFoldable, DeriveTraversable
  ghc-options: -Wall
  build-depends:       base
      , boundingboxes
      , bytestring
      , containers
      , directory
      , filepath
      , free
      , freetype2 ^>= 0.1.2
      , gl
      , GLFW-b
      , hashable
      , JuicyPixels
      , resourcet
      , lens
      , linear
      , mtl
      , random
      , raw-strings-qq
      , reflection
      , template-haskell
      , text
      , transformers
      , vector
      , unliftio
  hs-source-dirs:      src
  default-language:    Haskell2010

executable holz-test
  main-is: test.hs
  hs-source-dirs: examples
  ghc-options: -O2 -threaded -Wall
  build-depends: base, linear, holz, raw-strings-qq
  default-language:    Haskell2010
